# erg-screen-reader

./: .gitignore  CLAUDE.md  ErgScreenReader.py  Makefile  README.md  analyze_fit.py  interval_workout.xlsx  output.xlsx  pyproject.toml  requirements.txt  run_web.py
.claude/: settings.local.json
erg_screen_reader/: __init__.py  cli.py  core.py  google_sheets_service.py  models.py  prompt_template.py  web.py
scripts/: dev.py  setup.py
src/: FitToCSV.py  Fit_csv_reader.py  __init__.py  app.py  erg_screen_reader.py  fit_analyzer.py  google_sheets_service.py  models.py  prompt_template.py  test_structured_parsing.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py
